welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:21: error: not found: type int
def position(i: Int,k : int, ligne: Boolean){
                        ^FlowerPot:44: error: value position is not a member of Unit
      case 1 => motif(Color.RED, Color.YELLOW)position(0,0,false)
                                              ^